@@ -8,6 +8,8 @@
  - Throw structured exception if an endpoint can't be calculated
  - Support for STS regional endpoint when used passing a region to $paws->service('STS', region => 'Desired region'). 
    $paws->service('STS') still uses the global sts.amazonaws.com endpoint
+ - Paws::Credential::AssumeRole and Paws::Credential::STS support new sts_region attribute to select region. Default
+   is to use the global region
 
 0.12 09 Jul 2015
  - New API: CodePipeline
